# Hospedagem-Hotel

./: CMakeLists.txt  funcoesClientes.c  funcoesClientes.h  funcoesHospedagem.c  funcoesHospedagem.h  funcoesMenu.c  funcoesMenu.h  funcoesQuartos.c  funcoesQuartos.h  funcoesReservas.c  funcoesReservas.h  main.c  tempo.c  tempo.h
